<resources>
    <string name="app_name">S.R.Citas</string>
    <string name="label_login">Inicio de sesión</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Contraseña</string>

    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_register">¿Aún no te has registrado?</string>
    <string name="label_registro">Registro</string>
    <string name="label_nombre">Nombre Completo</string>
    <string name="btn_register">Confirmar registro</string>
    <string name="label_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="plis_fill_your_register">Por favor completa tus datos</string>
    <string name="btn_create_appointments">Reservar cita</string>
    <string name="btn_my_appointments">Mis citas</string>
    <string name="btn_log_out">Cerrar sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar cita</string>
    <string name="label_description">Descripción</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operación</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_scheduled_date">Fecha de la cita</string>
    <string name="btn_confirm">Confirmar</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>

    <string name="item_appointment_id">Cita médica %1$d</string>
    <string name="item_appointment_date">Atención el día %1s</string>
    <string name="item_appointment_time">A las %1s</string>
    <string name="label_my_appointments">Mis citas médicas</string>
    <string name="press_back_again">Presione una vez más para salir</string>
    <string name="dialog_create_appointment_exit_title">Estás seguro que deseas salir?</string>
    <string name="dialog_create_appointment_exit_message">Si abandonas el registro, los datos que habias ingresado se perderán</string>
    <string name="positive_button">Si , salir</string>
    <string name="negative_button">Continuar registro</string>
    <string name="validate_appointment_description">La descripción es muy corta</string>
    <string name="label_scheduled_time">Hora de la cita</string>
    <string name="label_confirm_appointment_data">Datos de la cita</string>
    <string name="validate_appointment_date">Es necesario Seleccionar una fecha</string>
    <string name="validate_appointment_time">Es necesario definir una hora para la cita</string>
    <string name="error_loading_specialties">Ocurrio un problema al cargar las especialidades</string>
    <string name="error_loading_doctors">Ocurrió un problema al cargar los médicos</string>
    <string name="error_loading_hours">No se ha podido cargar las horas</string>
    <string name="label_selected_doctor_and_Date">Seleccione un médico y una fecha para ver sus horas disponibles.</string>
    <string name="label_not_available_hours">No se encontraron horas disponibles para el médico en el día seleccionado.</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="error_empty_credentials">Por favor ingrese un correo y contraseña</string>
    <string name="welcome_name">Bienvenido %1$s</string>
    <string name="item_appointment_Created_At">Esta cita se registro el dia %1$s con la siguiente Descripción</string>
    <string name="create_appointment_success">Cita registrada correctamente</string>
    <string name="create_appointment_error">Ocurrio un error en el regsro de cita médica</string>
    <string name="label_password_confirmation">Confirmar Contraseña</string>
    <string name="error_register_empty_fields">Por favor completar todos los campos</string>
    <string name="error_register_passwords_do_not_match">Las contraseñas no coinciden</string>
    <string name="error_register_validation">Ocurrio un error en el registro</string>
    <string name="default_notification_channel_id">default_chenel</string>
    <string name="btn_edit_profile">Editar perfil</string>
    <string name="label_label_edit_profile">Editar datos básicos</string>
    <string name="label_phone">Número de teléfono</string>
    <string name="label_direccion">Dirección</string>
    <string name="btn_save">Guardar Cambios</string>
    <string name="profile_success_message">Los cambios se han guardado correctamente</string>
    <string name="error_profile_name">El nombre ingresado es demasiado corto.</string>
    <string name="you_need_a_phone">Es necesario asociar primero un teléfono a tu cuenta</string>
</resources>
